--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -241,6 +241,7 @@ h2 {
 @import "layouts/blog";
 @import "layouts/cv";
 @import "layouts/about";
+@import "layouts/poems";
 
 
 ///////////////////////mobile
