--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,10 +4,10 @@
     <div class="home-content">
       {{ .Content | markdownify }}
       <!-- Contact Section: full heading and links, styled together -->
-      <h3>Contact</h3>
+      <h3>Contact and Links</h3>
       <div class="icon-links vertical">
-        <a href="https://www.cnlab.ch/en/about-us/dr-simran-tinani" target="_blank" rel="noopener">
-          <i class="fas fa-building"></i> <u>Workplace homepage</u>
+        <a href="https://simrantinani.com" target="_blank" rel="noopener">
+          <i class="fas fa-building"></i> <u>Technical Writings: A personal homepage for my work-related interests</u>
         </a>
         <a href="https://github.com/simran-tinani" target="_blank" rel="noopener">
           <i class="fab fa-github"></i> <u>GitHub</u>
@@ -15,6 +15,14 @@
         <a href="https://linkedin.com/in/simran-tinani/" target="_blank" rel="noopener">
           <i class="fab fa-linkedin"></i> <u>LinkedIn</u>
         </a>
+        I organize two Meetup groups in Zürich:
+       <a href="https://www.meetup.com/vegan-and-vegan-curious-in-zurich" target="_blank" rel="noopener">
+          <i class="fab fa-meetup"></i> <u>Vegan and Vegan-Curious in Zürich: A community for vegans and those exploring plant-forward living</u>
+        </a>
+       <a href="https://www.meetup.com/zurich-weekend-study-and-co-work-group/" target="_blank" rel="noopener">
+          <i class="fab fa-meetup"></i> <u>Zürich Productivity Circle: A community for learning and personal growth </u>
+        </a>
+
       </div>
     </div>
   </section>
