--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -243,6 +243,7 @@ h2 {
 @import "layouts/about";
 @import "layouts/poems";
 @import "layouts/essays";
+@import "layouts/bookshelf";
 
 
 ///////////////////////mobile
