poem section done only tags remain

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -242,6 +242,7 @@ h2 {
 @import "layouts/cv";
 @import "layouts/about";
 @import "layouts/poems";
+@import "layouts/poem-single";
 @import "layouts/essays";
 @import "layouts/bookshelf";
 
